<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundGray"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            style="@style/Base.Widget.AppCompat.ActionButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight=".50"
            android:background="@android:color/white"
            android:text="@string/my_data" />

        <View
            android:id="@+id/divider"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="?android:attr/listDivider" />

        <Button
            style="@style/Base.Widget.AppCompat.ActionButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight=".50"
            android:background="@android:color/white"
            android:text="@string/my_history" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:paddingHorizontal="20dp"
        android:paddingTop="10dp"
        tools:targetApi="o">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:orientation="vertical">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:autofillHints=""
                android:drawableStart="@drawable/ic_person_black_24dp"
                android:drawableLeft="@drawable/ic_person_black_24dp"
                android:drawablePadding="5sp"
                android:hint="@string/first_name"
                android:inputType="text"
                android:paddingVertical="15sp"
                tools:ignore="LabelFor"
                tools:targetApi="o" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:autofillHints=""
                android:drawableStart="@drawable/ic_person_black_24dp"
                android:drawableLeft="@drawable/ic_person_black_24dp"
                android:drawablePadding="5sp"
                android:hint="@string/last_name"
                android:inputType="text"
                android:paddingVertical="15sp"
                tools:ignore="LabelFor"
                tools:targetApi="o" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:orientation="vertical"
            android:paddingHorizontal="10dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:background="@android:color/white"
                android:contentDescription="@string/profile_image"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_person_black_24dp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="20dp"
        tools:targetApi="o">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:autofillHints=""
            android:drawableStart="@drawable/ic_email_black_24dp"
            android:drawableLeft="@drawable/ic_email_black_24dp"
            android:drawablePadding="5sp"
            android:hint="@string/email"
            android:inputType="text"
            android:paddingVertical="15sp"
            tools:ignore="LabelFor"
            tools:targetApi="o" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:autofillHints=""
            android:drawableStart="@drawable/ic_lock_black_24dp"
            android:drawableLeft="@drawable/ic_lock_black_24dp"
            android:drawablePadding="5sp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingVertical="15sp"
            tools:ignore="LabelFor"
            tools:targetApi="o" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:autofillHints=""
            android:drawableStart="@drawable/ic_call_black_24dp"
            android:drawableLeft="@drawable/ic_call_black_24dp"
            android:drawablePadding="5sp"
            android:hint="@string/phone"
            android:inputType="phone"
            android:paddingVertical="15sp"
            tools:ignore="LabelFor"
            tools:targetApi="o" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:autofillHints=""
            android:drawableStart="@drawable/ic_home_black_24dp"
            android:drawableLeft="@drawable/ic_home_black_24dp"
            android:drawablePadding="5sp"
            android:hint="@string/address"
            android:inputType="text"
            android:paddingVertical="15sp"
            tools:ignore="LabelFor"
            tools:targetApi="o" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_weight="0.60"
                android:autofillHints=""
                android:drawableStart="@drawable/ic_my_location_black_24dp"
                android:drawableLeft="@drawable/ic_my_location_black_24dp"
                android:drawablePadding="5sp"
                android:hint="@string/zip_code"
                android:inputType="text"
                android:paddingVertical="15sp"
                tools:ignore="LabelFor"
                tools:targetApi="o" />

            <Button
                style="@style/Base.TextAppearance.AppCompat.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.4"
                android:padding="5dp"
                android:text="@string/locate_me" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>